<resources>
    <string name="app_name">Family Map</string>
    <string name="server_host">Server Host: </string>
    <string name="server_port">Server Port: </string>
    <string name="username">User Name: </string>
    <string name="password">Password: </string>
    <string name="first_name">First Name: </string>
    <string name="last_name">Last Name: </string>
    <string name="email">Email: </string>
    <string name="gender">Gender: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="registerButton">Register</string>
    <string name="loginButton">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="searchIcon">Search</string>
    <string name="settingsIcon">Settings</string>
    <string name="lifeEvents">Life Events</string>

</resources>